--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.9.5",
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-jsbeautifier": "~0.2.10",
     "grunt-jsdoc": "^0.5.7",
     "grunt-simple-mocha": "^0.4.0",
     "mocha": "^1.21.4",
