--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-bing-api",
-  "version": "3.0.0",
-  "description": "Node.js module for the Azure Bing Search API",
+  "version": "3.0.1",
+  "description": "Node.js module for the Cognitive Services Bing Search API",
   "main": "index.js",
   "author": "Mr. Goferito",
   "license": "MIT",
